K8S/be/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask-container
          image: krishnabelamkonda/secret_space:v3
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
          resources:
            limits:
              cpu: "128m"
              memory: "256Mi"
            requests:
              cpu: "64m"
              memory: "128Mi"
          volumeMounts:
            - name: psql-pv-storage
              mountPath: /var/log/flask/
            - name: flask-configs-vol
            # if we set only mountPath will act as a directory here, so we are using subPath for the file
              mountPath: /app/configs/app.ini
              subPath: app.ini
      imagePullSecrets:
        - name: dockerhub-creds
      volumes:
        - name: psql-pv-storage
          persistentVolumeClaim:
            claimName: psql-pv-claim
        - name: flask-configs-vol
          configMap:
            name: flask-configs
