K8S/be/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - port: 5052
      targetPort: 5000
      nodePort: 30052
