K8S/be/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-psql-ingress
spec:
  rules:
  - host: "ghl.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-service
            port:
              number: 80
